--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "scripts": {
     "start": "webpack-dev-server && webpack --watch",
     "open": "electron start.js",
-    "build": "electron-packager . \"EtsyToShopifyCSV\" --overwrite --asar --platform=win32 --arch=ia32 --icon=icon.ico --prune=true --out=app --version=1.0.0",
+    "build": "webpack",
+    "build:app": "electron-packager . \"EtsyToShopifyCSV\" --overwrite --asar --platform=win32 --arch=ia32 --icon=icon.ico --prune=true --out=app --version=1.0.0",
     "create-installer-win": "node installer/windows/createinstaller.js"
   },
   "devDependencies": {
